--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "express-fileupload": "^1.3.1",
+    "fs": "^0.0.1-security",
+    "jsesc": "^3.0.2",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.2",
-    "nodemon": "^2.0.16"
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.16",
+    "path": "^0.12.7"
   }
 }
