--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,13 @@
 {
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.0",
     "cloudinary": "^1.30.0",
+    "config": "^3.3.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
@@ -11,7 +17,9 @@
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.2",
     "multer": "^1.4.4",
-    "nodemon": "^2.0.16",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
